log
Thu Apr  7 15:39:19 UTC 2022: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   long index* = hash(key, map->capacity);
             ^
hashmap.c:43:15: error: expected expression before ‘=’ token
   long index* = hash(key, map->capacity);
               ^
hashmap.c:44:22: error: array subscript is not an integer
   while (map->buckets[index] != NULL && map->buckets[index]->key != NULL)
                      ^
hashmap.c:44:53: error: array subscript is not an integer
   while (map->buckets[index] != NULL && map->buckets[index]->key != NULL)
                                                     ^
hashmap.c:46:30: error: array subscript is not an integer
     if (is_equal(map->buckets[index]->key,key) == 1 ) return;
                              ^
hashmap.c:47:25: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
     index = (index + 1) % map->capacity;
             ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
hashmap.c:49:19: error: array subscript is not an integer
   if (map->buckets[index] != NULL)
                   ^
hashmap.c:51:17: error: array subscript is not an integer
     map->buckets[index]->key = key;
                 ^
hashmap.c:52:17: error: array subscript is not an integer
     map->buckets[index]->value = value;
                 ^
hashmap.c:55:17: error: array subscript is not an integer
     map->buckets[index] = createPair(key,value);
                 ^
hashmap.c:57:34: error: expected expression before ‘)’ token
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                  ^
hashmap.c:57:39: error: statement with no effect [-Werror=unused-value]
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                    ~~~^~~~~~~~~~
hashmap.c:57:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
   ^~
hashmap.c:57:56: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                                        ^
hashmap.c:57:56: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
519deb2
Thu Apr  7 15:40:25 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:57:34: error: expected expression before ‘)’ token
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                  ^
hashmap.c:57:39: error: statement with no effect [-Werror=unused-value]
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                    ~~~^~~~~~~~~~
hashmap.c:57:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
   ^~
hashmap.c:57:56: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   if ((double) map->size/(double)) map->capacity > 0.75) enlarge(map);
                                                        ^
hashmap.c:57:56: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
5f99c04
Thu Apr  7 15:40:48 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
e08a3c5
Thu Apr  7 15:54:36 UTC 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:69:5: error: unknown type name ‘hashmap’; did you mean ‘HashMap’?
     hashmap index2;
     ^~~~~~~
     HashMap
hashmap.c:70:11: error: invalid type argument of ‘->’ (have ‘int’)
     index2->buckets =NULL;
           ^~
hashmap.c:71:11: error: invalid type argument of ‘->’ (have ‘int’)
     index2->capacity = NULL;
           ^~
hashmap.c:72:11: error: invalid type argument of ‘->’ (have ‘int’)
     index2->size = NULL;
           ^~
hashmap.c:73:11: error: invalid type argument of ‘->’ (have ‘int’)
     index2->current = -1;
           ^~
Compilation failed
80525aa
Thu Apr  7 15:55:40 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:69:5: error: unknown type name ‘hashmap’; did you mean ‘HashMap’?
     hashmap index2;
     ^~~~~~~
     HashMap
hashmap.c:70:11: error: invalid type argument of ‘->’ (have ‘int’)
     index2->buckets =NULL;
           ^~
hashmap.c:71:11: error: request for member ‘capacity’ in something not a structure or union
     index2.capacity = NULL;
           ^
hashmap.c:72:11: error: request for member ‘size’ in something not a structure or union
     index2.size = NULL;
           ^
hashmap.c:73:11: error: request for member ‘current’ in something not a structure or union
     index2.current = -1;
           ^
Compilation failed
3d5322d
Thu Apr  7 15:56:10 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:11: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
     index2->buckets =NULL;
           ^~
hashmap.c:71:21: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     index2.capacity = NULL;
                     ^
hashmap.c:72:17: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     index2.size = NULL;
                 ^
cc1: all warnings being treated as errors
Compilation failed
6cfb44d
Thu Apr  7 15:57:02 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:70:11: error: invalid type argument of ‘->’ (have ‘HashMap {aka struct HashMap}’)
     index2->buckets =NULL;
           ^~
Compilation failed
f67bf2a
